fix (player-three-js): rename player component and fix overflow

--- a/src/app/sections/play/play.component.scss
+++ b/src/app/sections/play/play.component.scss
@@ -19,11 +19,12 @@
     height: 72vh;
   }
 
-  player-babylon {
+  player-three-js {
     position: absolute;
     left: 0;
     width: 100%;
     height: 80vh;
+    overflow: hidden;
   }
 
   picture {
